added second page and header icon

--- a/src/app/book-view/book-view.component.html
+++ b/src/app/book-view/book-view.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12">
-      <h2> Books</h2>
+      <span class="page-title"> Book list </span>
       <div class="container">
         <div class="dropdown">
           <button class="btn btn--action dropdown-toggle" data-bs-toggle="dropdown">
