--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -6,6 +6,19 @@ body {
   color: #333;
   background-color: #fff;
 }
+.content {
+  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-size: 14px;
+  line-height: 1.42857143;
+  color: #333;
+  background-color: #fff;
+}
+.page-title {
+  text-transform: capitalize;
+  font-size: 1.2em;
+  color: @color-dark;
+}
+
 a {
   text-decoration: none;
   color: @color-gray-darkest;
