--- a/src/app/single-book/single-book.component.less
+++ b/src/app/single-book/single-book.component.less
@@ -1,3 +1,5 @@
+@import "../../styles/colors.less";
+
 .title {
   margin-bottom: 2em;
 }
@@ -9,5 +11,8 @@
   fa-icon {
     margin: 0.3em 0;
     width: 2em;
+  }
+  a {
+    color: @color-light;
   }
 }
