added session time, karma conf

--- a/src/app/header/header.component.less
+++ b/src/app/header/header.component.less
@@ -6,7 +6,7 @@
     color: @color-light;
     stroke: #334B49;
   }
-  span {
+  .navBar__title {
     margin-left: 0.5em;
     margin-right: 1.3em;
     font-family: "Bookman Old Style";
@@ -19,5 +19,9 @@
   }
   .navBar__li-active {
     font-weight: bold;
+  }
+  .navBar__li-right {
+    font-weight: normal;
+    font-size: 0.7em;
   }
 }
