--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,12 +2,17 @@
   <div class="container">
     <a class="navbar-brand" href="#">
       <fa-icon icon="book-reader" size="lg"></fa-icon>
-      <span>Share & Vote</span>
+      <span class="navBar__title">Share & Vote</span>
     </a>
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
         <li class="nav-link navBar__li" routerLinkActive="navBar__li-active"><a routerLink="books">See books</a></li>
         <li class="nav-link navBar__li" routerLinkActive="navBar__li-active"><a routerLink="random">See films</a></li>
+      </ul>
+    </div>
+    <div class="navbar-collapse collapse navbar-right">
+      <ul class="nav navbar-nav">
+        <li class="nav-link navBar__li navBar__li-right"><span>Voting session started for {{sessionTime}} seconds </span></li>
       </ul>
     </div>
   </div>
